      used.
    - Patch by Adam Thornton to add recognition for IUCV devices in static
      configuration. (Closes: #258109)
    - Don't suggest hostname given by the DHCP server if it's invalid.
      (Closes: #258207)
    - Ask netcfg/choose_interface at prio critical. (Closes: #257963)
    - Build with NDEBUG.
    - Indicate which interfaces are wireless. (Closes: #258338)
  * Colin Watson
    - Fix typo (s/occured/occurred/g). Unfuzzy translations.

 -- Joshua Kwan <joshk@triplehelix.org>  Thu,  8 Jul 2004 10:12:33 -0700

netcfg (0.71) unstable; urgency=low

  * Joshua Kwan
    - Remove XSIisms in dhclient-script.
    - Evaluate argv[0] after calling basename on it so that we can strcmp it
      against "ptom". It somehow didn't happen in the internal dhclient-script
      context, but appeared during testing in the shell.
    - Add Thomas Hood to Uploaders.
    - Re-enable broadcast stuff in dhclient-script, fixing a Sparc (at least)
      regression.
    - Remove kill_dhcp_client prototype from netcfg.h because it's now static.
    - Change newline + a space to just a newline to end some disable_dhcp
      woes.
    - Warn if there's no default route available after getting a DHCP lease.
      (Closes: #253543)
    - Don't add 'auto' or hotplug mapping lines for 16-bit PCMCIA devices.
      (Closes: #248071, #239284)
    - Add a missing fclose in iface_is_hotpluggable.
  * Christian Perrier
    - netcfg-dhcp.templates
      Some rewrite for being clearer, possibly. Run debconf-updatepo
  * Thomas Hood
    - Change interfaces options that use underscore to hyphens. No loss
      of functionality. (Closes: #255185)
    - *.c:
      + Test for NULL pointers before using empty_str()
    - netcfg.c, netcfg-dhcp.c, netcfg-static.c
      + Handle the case where there are no interfaces.  Just ask for a
        hostname and write basic /etc/network/interfaces and /etc/hosts
        files.  (Closes: #243543)
    - netcfg-common.c: